# kokedb

./: Cargo.toml  README.md
sql-macro/: Cargo.toml
src/cache/: Cargo.toml
src/cache/src/: lib.rs
src/catalog/: Cargo.toml
src/catalog/src/: command.rs  datafusion_catalog.rs  datafusion_catalog_adapter.rs  lib.rs
src/catalog/src/manager/: catalog.rs  mod.rs
src/catalog/src/provider/: options.rs  status.rs
src/common/: Cargo.toml
src/common-datafusion/: Cargo.toml
src/common-datafusion/src/: error.rs  udf.rs
src/common/src/: cache_policy.rs  env.rs  file.rs  lib.rs  opentelemetry.rs  runtime.rs
src/common/src/spec/: plan.rs
src/common/src/table/: postgresql.rs
src/data-source/: Cargo.toml
src/data-source/src/: registry.rs
src/data-source/src/formats/: listing.rs  mod.rs  remote_table.rs
src/meta/: Cargo.toml
src/meta/src/: catalog_list.rs  datafusion_catalog.rs  lib.rs  schema.rs
src/plan/: Cargo.toml
src/plan/src/: config.rs  error.rs  formatter.rs  lib.rs
src/plan/src/extension/function/: spark_to_string.rs
src/plan/src/extension/function/datetime/: convert_tz.rs  spark_date.rs  spark_interval.rs  spark_timestamp.rs
src/plan/src/extension/logical/: catalog.rs  file_write.rs  map_partitions.rs  show_string.rs
src/plan/src/extension/physical/: file_write.rs  map_partitions.rs  show_string.rs
src/plan/src/extension/source/: rename.rs
src/plan/src/function/scalar/: misc.rs
src/plan/src/resolver/: constraint.rs  data_type.rs  function.rs  literal.rs  plan.rs  schema.rs
src/plan/src/resolver/command/: explain.rs  function.rs  insert.rs  mod.rs  show.rs  write.rs  write_v1.rs  write_v2.rs
src/plan/src/resolver/command/catalog/: database.rs  table.rs  view.rs
src/plan/src/resolver/expression/: attribute.rs  cast.rs  function.rs  grouping.rs  lambda.rs  literal.rs  misc.rs  mod.rs  predicate.rs  sort.rs  subquery.rs  udf.rs  wildcard.rs  window.rs
src/plan/src/resolver/query/: aggregate.rs  alias.rs  column_op.rs  cte.rs  dedup.rs  filter.rs  join.rs  lateral.rs  limit.rs  misc.rs  mod.rs  na.rs  pivoting.rs  project.rs  read.rs  recursion.rs  repartition.rs  sample.rs  set_op.rs  sort.rs  stat.rs  udf.rs  udtf.rs  values.rs
src/python-udf/: Cargo.toml
src/python-udf/src/: stream.rs
src/python-udf/src/cereal/: mod.rs  pyspark_udf.rs  pyspark_udtf.rs
src/python-udf/src/udf/: pyspark_map_iter_udf.rs  pyspark_udtf.rs  pyspark_unresolved_udf.rs
src/query/: Cargo.toml
src/query/src/: binder.rs  catalog.rs  context.rs  datafusion_catalog.rs  error.rs  lib.rs  main.rs  mem_catalog.rs
src/server/mysql/: Cargo.toml
src/server/mysql/src/: column.rs  error.rs  main.rs  row.rs
src/sql-analyzer/: Cargo.toml
src/sql-analyzer/src/: data_type.rs  dsn.rs  error.rs  expression.rs  lib.rs  parser.rs  query.rs  statement.rs  value.rs
src/sql-analyzer/src/literal/: interval.rs  numeric.rs  utils.rs
src/sql-macro/: Cargo.toml
src/sql-macro/src/: attribute.rs  lib.rs  utils.rs
src/sql-macro/src/tree/: parser.rs
src/sql-parser/: Cargo.toml
src/sql-parser/src/ast/: data_type.rs  dsn.rs  expression.rs  identifier.rs  mod.rs  operator.rs  query.rs  statement.rs
src/task-manager/: Cargo.toml
src/task-manager/src/: cache_sync_task.rs  error.rs  lib.rs  postgres_table_analyzer.rs  read_postgres.rs  runner.rs  task.rs  task_manager.rs
