[workspace.package]
name = "kokedb"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "3"
members = ["src/query", "sql-macro", "src/sql-parser", "src/common", "src/sql-analyzer"]

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
kokedb_common = { path = "src/common" }
kokedb_sql_macro = {path = "sql-macro"}
kokedb_sql_parser = {path = "src/sql-parser"}
kokedb_sql_analyzer = {path = "src/sql-analyzer"}
kokedb_query = {path = "src/query"}



tokio = { version = "1.47.1", features = ["full"] }

syn = "2.0.106"
quote = "1.0.40"
proc-macro2 = "1.0.101"

chumsky = { version = "0.10.1", default-features = false, features = ["pratt"] }
phf = { version = "0.13.1", features = ["macros"] }
either = "1.15.0"
paste = "1.0.15"
prettyplease = "0.2.37"


lazy_static = "1.5.0"
thiserror = { version = "2.0.16" }
regex = "1.11.2"
chrono = "0.4.41"
chrono-tz = "0.10.4"

arrow = { version = "55.2.0", features = ["chrono-tz"] }
arrow-buffer = { version = "55.2.0" }
arrow-schema = { version = "55.2.0", features = ["serde"] }
arrow-flight = { version = "55.2.0" }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
# TODO: `serde_yaml` is deprecated. No satisfactory alternative exists yet, we may need to build our own in the future.
serde_yaml = "0.9.34"

glob = "0.3.3"
num_enum = "0.7.4"
num-traits = "0.2.19"

figment = { version = "0.10.19", features = ["toml", "env"] }
half = { version = "2.6.0", features = ["serde", "num-traits", "zerocopy"] }
iana-time-zone = "0.1.63"
