[workspace.package]
name = "kokedb"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "3"
members = [
  "src/query",
  "sql-macro",
  "src/sql-parser",
  "src/common",
  "src/sql-analyzer",
  "src/server/mysql",
  "src/common-datafusion",
  "src/catalog",
  "src/plan",
  "src/python-udf",
  "src/data-source",
  "src/task-manager",
  "src/meta"
, "src/cache"]
default-members = ["src/server/mysql"]


[workspace.lints.rust]
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
deprecated = "deny"
deprecated_where_clause_location = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
kokedb-common = { path = "src/common" }
kokedb-sql-macro = { path = "sql-macro" }
kokedb-sql-parser = { path = "src/sql-parser" }
kokedb-sql-analyzer = { path = "src/sql-analyzer" }
kokedb-query = { path = "src/query" }
kokedb-common-datafusion = { path = "src/common-datafusion" }
kokedb-catalog = { path = "src/catalog" }
kokedb-plan = { path = "src/plan" }
kokedb-python-udf = { path = "src/python-udf" }
kokedb-data-source = { path = "src/data-source" }
kokedb-task-manager = { path = "src/task-manager" }
kokedb-meta = { path = "src/meta" }



tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"

syn = "2.0.106"
quote = "1.0.40"
proc-macro2 = "1.0.101"

chumsky = { version = "0.10.1", default-features = false, features = ["pratt"] }
phf = { version = "0.13.1", features = ["macros"] }
either = "1.15.0"
paste = "1.0.15"
prettyplease = "0.2.37"


thiserror = { version = "2.0.16" }
regex = "1.11.2"
chrono-tz = "0.10.4"
chrono = { version = "0.4.41", features = ["serde"] }

arrow = { version = "55.2.0", features = ["chrono-tz"] }
arrow-buffer = { version = "55.2.0" }
arrow-schema = { version = "55.2.0", features = ["serde"] }
arrow-flight = { version = "55.2.0" }
arrow-pyarrow = { version = "55.2.0" }


serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
# TODO: `serde_yaml` is deprecated. No satisfactory alternative exists yet, we may need to build our own in the future.
serde_yaml = "0.9.34"
serde_arrow = { version = "0.13.5", features = ["arrow-55"] }

glob = "0.3.3"
num_enum = "0.7.4"
num-traits = "0.2.19"

figment = { version = "0.10.19", features = ["toml", "env"] }
half = { version = "2.6.0", features = ["serde", "num-traits", "zerocopy"] }
iana-time-zone = "0.1.63"

async-trait = "0.1.89"
async-recursion = "1.1.1"
async-stream = "0.3.6"
lazy_static = "1.5.0"


datafusion = { version = "49.0.0", features = ["serde", "avro"] }
datafusion-common = { version = "49.0.0", features = ["object_store", "avro"] }
datafusion-expr = { version = "49.0.0" }
datafusion-expr-common = { version = "49.0.0" }
datafusion-functions = { version = "49.0.0" }
datafusion-functions-nested = { version = "49.0.0" }
datafusion-physical-expr = { version = "49.0.0" }
datafusion-datasource = { version = "49.0.2", features = ["compression", "parquet"] }
datafusion-functions-json = { git = "https://github.com/lakehq/datafusion-functions-json.git", rev = "d199e09" }
datafusion-spark = { version = "49.0.2" }

object_store = { version = "0.12.3", features = ["aws", "gcp", "azure", "http"] }

ryu = "1.0.20"
lexical-core = { version = "1.0.5", default-features = false, features = ["write-integers", "write-floats", "parse-integers", "parse-floats"] }
futures = "0.3.31"
pyo3 = { version = "0.24.2", features = ["auto-initialize", "serde"] }
num-bigint = "0.4.6"

log = "0.4.27"
env_logger = "0.11.8"
fastrace = { version = "0.7.14", features = ["enable"] }
fastrace-opentelemetry = "0.13.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["tls", "tls-roots", "grpc-tonic"] }

url = "2.5.7"
percent-encoding = "2.3.2"
once_cell = "1.21.3"
uuid = { version = "1.18.0", features = ["v4"] }
bytes = "1.10.1"
comfy-table = "7.1.4"
html-escape = "0.2.13"
mimalloc = { version = "0.1.48", default-features = false }
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
aes = "0.8.4"
aes-gcm = "0.10.3"
sha1 = "0.10.6"
twox-hash = "2.1.1"
cbc = { version = "0.1.2", features = ["std"] }
base64 = "0.22.1"
md-5 = "0.10.6"
crc32fast = "1.5.0"
num = "0.4.3"

tonic = { version = "0.12.3", features = ["tls", "tls-roots", "gzip", "zstd"] }
tonic-build = "0.12.3"
tonic-reflection = "0.12.3"
tonic-health = "0.12.3"
tonic-types = "0.12.3"

dashmap = "6.1.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal" ] }
rust_decimal = "1.38.0"
futures-util = "0.3.31"
anyhow = "1.0.99"

tokio-cron-scheduler = "0.14.0"
hex = "0.4"
xxhash-rust = { version = "0.8.15", features = ["xxh3",] }

foyer = "0.20"
