[package]
name = "kokedb-catalog"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
kokedb-common.workspace = true
kokedb-common-datafusion.workspace = true
kokedb-task-manager.workspace = true
kokedb-meta.workspace = true

dashmap.workspace = true
sqlx.workspace = true
tokio.workspace = true
log.workspace = true
arrow-schema.workspace = true
tokio-cron-scheduler.workspace = true

datafusion.workspace = true
datafusion-common.workspace = true
datafusion-expr.workspace = true
serde.workspace = true
serde_arrow.workspace = true
regex.workspace = true
lazy_static.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
