[package]
name = "kokedb-data-source"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
kokedb-common-datafusion.workspace = true
kokedb-common.workspace = true

sqlx.workspace = true
arrow.workspace = true
tokio.workspace = true
async-stream.workspace = true

async-trait.workspace = true
serde.workspace = true
futures.workspace = true
datafusion.workspace = true
datafusion-common.workspace = true
datafusion-datasource.workspace = true
object_store.workspace = true
chumsky.workspace = true
glob.workspace = true
url.workspace = true
regex.workspace = true
percent-encoding.workspace = true 
once_cell.workspace = true
log.workspace = true
uuid.workspace = true
bytes.workspace = true

[build-dependencies]
serde.workspace = true
serde_yaml.workspace = true
syn.workspace = true
prettyplease.workspace = true
regex.workspace = true
quote.workspace = true
proc-macro2.workspace = true
