[package]
name = "kokedb-meta"
version.workspace = true
edition.workspace = true

[dependencies]
kokedb-common.workspace = true
kokedb-data-source.workspace = true

arrow.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
sqlx.workspace = true
dashmap.workspace = true
datafusion.workspace = true
tokio.workspace = true
log.workspace = true

[lints]
workspace = true
