[package]
name = "kokedb-sql-analyzer"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
kokedb-common.workspace = true
kokedb-sql-parser.workspace = true

thiserror.workspace = true
regex.workspace = true
lazy_static.workspace = true
chrono.workspace = true
chumsky.workspace = true
either.workspace = true
