[package]
name = "kokedb-task-manager"
version.workspace = true
edition.workspace = true

[dependencies]

datafusion.workspace = true

thiserror.workspace = true
async-trait.workspace = true
dashmap.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true


[lints]
workspace = true
