[package]
name = "kokedb-mysql-svc"
version.workspace = true
edition.workspace = true

[dependencies]
kokedb-query.workspace = true
kokedb-plan.workspace = true

opensrv-mysql = "0.7.0"
tokio.workspace = true
async-trait.workspace = true

datafusion.workspace = true

[[bin]]
path = "src/main.rs"
name = "kokedb-mysql-svc"

[lints]
workspace = true
